--- a/config/debug/BUILD.bazel
+++ b/config/debug/BUILD.bazel
@@ -9,8 +9,14 @@ bool_flag(
 )
 
 config_setting(
+    name = "debug",
+    values = {"compilation_mode": "dbg"}
+)
+
+config_setting(
     name = "ocamlrun-debug",
-    flag_values = {":ocamlrun": "True"}
+    flag_values = {":ocamlrun": "True"},
+    values = {"compilation_mode": "dbg"}
 )
 
 
