--- a/config/host/BUILD.bazel
+++ b/config/host/BUILD.bazel
@@ -28,3 +28,19 @@ config_setting(
         # "@platforms//cpu:x86_64",
     ]
 )
+
+config_setting(
+    name = "windows_x86_32",
+    constraint_values = [
+        "@platforms//os:windows",
+        "@platforms//cpu:x86_32",
+    ]
+)
+
+config_setting(
+    name = "windows_x86_64",
+    constraint_values = [
+        "@platforms//os:windows",
+        "@platforms//cpu:x86_64",
+    ]
+)
