--- a/middle_end/flambda/BUILD.bazel
+++ b/middle_end/flambda/BUILD.bazel
@@ -461,6 +461,7 @@ bootstrap_module(
         "//stdlib:Stdlib.Array",
     ],
     visibility = [
+        "//asmcomp:__pkg__",
         "//middle_end:__pkg__",
         "//tools:__pkg__",
     ]
