--- a/yacc/BUILD.bazel
+++ b/yacc/BUILD.bazel
@@ -23,7 +23,7 @@ cc_binary(
         "//conditions:default": []
     }),
     deps = ["//runtime/caml:hdrs"],
-    visibility = ["//bzl/toolchain:__pkg__"]
+    visibility = ["//toolchain/bootstrap/adapters:__pkg__"]
 )
 
 genrule(
