--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -26,9 +26,10 @@ obazl_deps()
 
 # Tell Bazel about our toolchains so it can resolve them based on values passed
 # in --platform, --host_platform, and --execution_platforms options.
+
 register_toolchains(
-    "//bzl/toolchain:bootstrap_macos",
-    # "//bzl/toolchain:bootstrap_macos_native"
+    "//toolchain/bootstrap",
+    # "//toolchain/type:bootstrap_macos_native"
 )
 
 # register_execution_platforms(
@@ -36,29 +37,29 @@ register_toolchains(
 #     "//bzl/platforms:mac_native"
 # )
 
-################################################################
-## llvm
+# ################################################################
+# ## llvm
 
-## to use the llvm toolchain (https://github.com/grailbio/bazel-toolchain):
-BAZEL_TOOLCHAIN_TAG = "0.7.2"
-BAZEL_TOOLCHAIN_SHA = "f7aa8e59c9d3cafde6edb372d9bd25fb4ee7293ab20b916d867cd0baaa642529"
+# ## to use the llvm toolchain (https://github.com/grailbio/bazel-toolchain):
+# BAZEL_TOOLCHAIN_TAG = "0.7.2"
+# BAZEL_TOOLCHAIN_SHA = "f7aa8e59c9d3cafde6edb372d9bd25fb4ee7293ab20b916d867cd0baaa642529"
 
-http_archive(
-    name = "com_grail_bazel_toolchain",
-    sha256 = BAZEL_TOOLCHAIN_SHA,
-    strip_prefix = "bazel-toolchain-{tag}".format(tag = BAZEL_TOOLCHAIN_TAG),
-    canonical_id = BAZEL_TOOLCHAIN_TAG,
-    url = "https://github.com/grailbio/bazel-toolchain/archive/{tag}.tar.gz".format(tag = BAZEL_TOOLCHAIN_TAG),
-)
-load("@com_grail_bazel_toolchain//toolchain:deps.bzl",
-     "bazel_toolchain_dependencies")
-bazel_toolchain_dependencies()
-load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")
-llvm_toolchain(name = "llvm_toolchain", llvm_version = "14.0.0")
-load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")
-llvm_register_toolchains()
+# http_archive(
+#     name = "com_grail_bazel_toolchain",
+#     sha256 = BAZEL_TOOLCHAIN_SHA,
+#     strip_prefix = "bazel-toolchain-{tag}".format(tag = BAZEL_TOOLCHAIN_TAG),
+#     canonical_id = BAZEL_TOOLCHAIN_TAG,
+#     url = "https://github.com/grailbio/bazel-toolchain/archive/{tag}.tar.gz".format(tag = BAZEL_TOOLCHAIN_TAG),
+# )
+# load("@com_grail_bazel_toolchain//toolchain:deps.bzl",
+#      "bazel_toolchain_dependencies")
+# bazel_toolchain_dependencies()
+# load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")
+# llvm_toolchain(name = "llvm_toolchain", llvm_version = "14.0.0")
+# load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")
+# llvm_register_toolchains()
 
-## end llvm ##
+# ## end llvm ##
 
 ################################################################
 ## zig
