--- a/compilerlibs/BUILD.bazel
+++ b/compilerlibs/BUILD.bazel
@@ -40,6 +40,7 @@ bootstrap_archive(
         "//tools:__pkg__",
         "//toplevel:__pkg__",
         "//utils:__pkg__",
+        "//testsuite:__pkg__",
     ]
 )
 
@@ -108,10 +109,13 @@ bootstrap_archive(
 # bootstrap_library(
 bootstrap_archive(
     name    = "ocamloptcomp",
-    visibility = ["//visibility:public"],
+    visibility = [
+        "//visibility:public",
+        # "//testsuite:__pkg__",
+    ],
     manifest = [
         "//asmcomp:ocamloptcomp",
-        "//middle_end:ocamloptcomp",
+        "//middle_end:ocamlmiddleend" # ocamloptcomp",
     ],
 )
 
